--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Logan Bray
-#logo: *reletive path*
+logo: Profile.jpg
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
