--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Logan Bray
-logo: Profile.jpg
+logo: Profile.png
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
