--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Logan Bray
 logo: Profile.png
-#description: text below image
+description: Dedicated and analytical professional with a strong background in data analysis and communication seeking a Business Analyst position to leverage expertise in optimizing business operations and decision-making processes.
 show_downloads: true
 theme: jekyll-theme-minimal
